...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/content_description_back_button"
...
            android:src="@drawable/arrow_back"
            android:tint="@color/bgButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlOfferDetailedSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="100dp">

            <ScrollView
                android:layout_width="match_parent"
...
                        android:src="@drawable/report"
                        android:tint="@color/symbol"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/ibtOfferDetailedBookmark"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:contentDescription="@string/bookmark_button"
...
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailedPrice" />

                    <ImageView
                        android:id="@+id/ivOfferDetailedProfile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/creator_image"
...
                        android:scaleType="fitCenter"
                        android:src="@drawable/profile_standard"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailedCity" />

                    <TextView
                        android:id="@+id/tvOfferDetailedUsername"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_margin="16dp"
                        android:clickable="true"
                        android:elevation="5dp"
                        android:shadowColor="@android:color/black"
...
                        android:textColor="@color/textHint"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailedDescription" />

                    <Button
                        android:id="@+id/btOfferDetailedParticipate"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/bg_button"
                        android:elevation="5dp"
                        android:text="@string/participate"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailedTag" />

                    <Button
                        android:id="@+id/btOfferDetailedParticipants"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/bg_button"
                        android:elevation="5dp"
                        android:text="@string/participants"
...
