...
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlOfferListSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOfferList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:elevation="3dp"
                android:paddingBottom="90dp" />

...
